--- a/.github/workflows/prod.yml
+++ b/.github/workflows/prod.yml
@@ -1,4 +1,4 @@
-name: Production Workflow 1
+name: Production Workflow
 
 on:
   push:
@@ -39,7 +39,7 @@ jobs:
         id: meta
         uses: docker/metadata-action@v3
         with:
-          images: kakatoto1/final
+          images: thomasannam/is601-project-four
 
       - name: Build and push
         uses: docker/build-push-action@v2
@@ -52,9 +52,9 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
-      - uses: akhileshns/heroku-deploy@v3.12.12 # This is the action
+      - uses: akhileshns/heroku-deploy@v3.12.12
         with:
           heroku_api_key: ${{secrets.HEROKU_API_KEY}}
-          heroku_app_name: "is601finalpro" #Must be unique in Heroku
-          heroku_email: "yufanthu@hotmail.com"
+          heroku_app_name: "thomasannam-is601-prod"
+          heroku_email: "ta222@njit.edu"
           usedocker: true
